@@ -1,3 +1,8 @@
+2016-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/mat.c (ReadMATImage): Validate that MAT frames is not
+	zero.
+
 2016-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/render.c (DrawImage): Be less optimistic when estimating
